force-app/main/default/objects/NI_Customization_Service__c/NI_Customization_Service__c.object-meta.xml
<CustomObject>
    <description>HRM Customization Object</description>
    <label>HRM Service</label>
    <nameField>
        <displayFormat>CS{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HRM Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>