force-app/main/default/objects/NI_Customization_Service__c/fields/Period_Starting__c.field-meta.xml
<CustomField>
    <fullName>Period_Starting__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Period Starting</label>
    <required>true</required>
    <type>Date</type>
</CustomField>