force-app/main/default/objects/NI_Customization_Service__c/fields/Time_Units_Balance__c.field-meta.xml
<CustomField>
    <fullName>Time_Units_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Time Units Balance</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>